--- a/projects/ngx-pv-table-index/src/table-index/components/table-index/table-index.component.scss
+++ b/projects/ngx-pv-table-index/src/table-index/components/table-index/table-index.component.scss
@@ -73,6 +73,26 @@ table.table-pv {
   width: calc(100% + 38px);
 }
 
+.chngButton {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 20px;
+  padding: 10px 5px;
+  cursor: pointer;
+
+  &:hover {
+    background: #F5F5F5;
+  }
+
+  &.chngInvis {
+    opacity: 0;
+    cursor: unset;
+  }
+}
+
 mat-expansion-panel.mat-expansion-panel {
   border-radius: 0px !important;
   box-shadow: 0px 0px 0px !important;
