--- a/projects/ngx-pv-table-index/src/table-index/components/table-index/table-index.component.scss
+++ b/projects/ngx-pv-table-index/src/table-index/components/table-index/table-index.component.scss
@@ -27,6 +27,7 @@ table.table-pv {
         text-align: center;
         padding: 10px 0;
         color: #222222 !important;
+        transition: .5s;
       }
 
       th.statText, td.statText {
