--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ngx-pv-table-index 
 [dataHeader]="examplHeader"
 [dataArray]="examplData"
-[statWidth]="60"
 [columnsPerPage]="4"
+[statWidth]="60"
+[statAlign]="'left'"
 ></ngx-pv-table-index>
