--- a/projects/ngx-pv-table-index/src/table-index/components/table-index/table-index.component.scss
+++ b/projects/ngx-pv-table-index/src/table-index/components/table-index/table-index.component.scss
@@ -15,19 +15,21 @@ table.table-pv {
       align-items: center;
       justify-content: space-between;
 
-      &:nth-child(2n) {
-        background: #f3f3f3;
-      }
-
       th, td {
         position: relative;
         display: block;
         width: 17%;
         font-size: 16px;
-        text-align: center;
-        padding: 10px 0;
         color: #222222 !important;
         transition: .5s;
+
+        span.dataScore {
+          position: relative;
+          display: block;
+          margin: auto;
+          width: 136px;
+          padding: 5px 10px;
+        }
       }
 
       th.statText, td.statText {
@@ -35,6 +37,10 @@ table.table-pv {
         display: flex;
         width: 50%;
         align-items: center;
+
+        span {
+          padding: 0 10px;
+        }
 
         img {
           width: 45px;
@@ -70,8 +76,8 @@ table.table-pv {
 .childrenHolder {
   position: relative;
   display: block;
+  width: calc(100% + 32px);
   left: -14px;
-  width: calc(100% + 38px);
 }
 
 .chngButton {
@@ -79,7 +85,7 @@ table.table-pv {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: calc(100% - 20px);
   width: 20px;
   padding: 10px 5px;
   cursor: pointer;
@@ -108,15 +114,31 @@ mat-expansion-panel.mat-expansion-panel {
     transition: 0.5s;
   }
 
-  &.layer-1 > mat-expansion-panel-header.mat-expansion-panel-header {
-    background: #f3f3f3;
+  & > mat-expansion-panel-header.mat-expansion-panel-header {
+    background: #F3F3F3;
   }
 
-  &.layer-1:nth-child(2n) > mat-expansion-panel-header.mat-expansion-panel-header {
-    background: #ffffff;
+  &:nth-child(2n) > mat-expansion-panel-header.mat-expansion-panel-header {
+    background: #FFFFFF;
   }
 
   &.mat-opened mat-icon.arrow-icon {
     transform: rotate(180deg);
   }
+}
+
+.leftAlign {
+  justify-content: flex-start;
+}
+
+.centerAlign {
+  justify-content: center;
+}
+
+.rightAlign {
+  justify-content: flex-end;
+}
+
+.boldText {
+  font-weight: 600;
 }
